auth/kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  progressDeadlineSeconds: 120
  template:
    metadata:
      name: authentication
      labels:
        app: authentication
    spec:
      hostAliases:
      - ip: "10.0.2.2"
        hostnames:
          - "api.authentication.com"
      containers:
      - name: authentication
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "256Mi"
        image: authentication:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
