auth/kubernetes/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentication
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /auth/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8080
        host: authentication
